[package]
name = "zama"
version = "0.1.0"
edition = "2024"

[dependencies]
tfhe = { version = "0.10.0", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
serde_json = { version = "1.0.117" }
bincode = "1.3.3"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
