[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    
] }
reqwest = { version = "0.12.3", features = ["blocking"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
rfd = "0.13"
egui_extras = { version="0.27.2",  features = ["default", "all_loaders"] }
image = { version = "0.24", default-features = false, features = [
  "jpeg",
  "png",
] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

