[package]
name = "filecoin_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } 
reqwest = { version = "0.12.3",features = ["multipart"] }
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
futures = "0.3"
